# vc-demo

./: .gitignore  ARTIFACT_ACQUISITION_AGENT_PROMPT.md  ARTIFACT_ACQUISITION_RUNBOOK.md  AUTONOMOUS_AGENT_LOOP_UPGRADE.md  BLOCKED_AWARE_MCTS_POLICY.md  B_REAL_CELLLINE_HANDOFF.md  B_REAL_K562_SUMMARY.md  CODEX_AGENT_COOKBOOK.md  CODEX_AGENT_OPERATING_RULES.md  C_EMBEDDING_FEATURES_HANDOFF.md  D_K562_MULTI_FEATURE_SEARCH_HANDOFF.md  E_CODEX_AGENT_EXPERIMENT_RUNBOOK.md  E_VCHARNESS_STYLE_HARNESS_HANDOFF.md  F_PROGRAM_NODE_HARNESS_UPGRADE.md  G_REAL_ARTIFACT_INTEGRATION_HANDOFF.md  HANDOFF.md  OFFICIAL_K562_IMPLEMENTATION_LOOP.md  PAPER_ALIGNMENT_LAYERS_1_4.md  PAPER_ALIGNMENT_LAYERS_5_8.md  PAPER_LEVEL_FRAMEWORK_UPGRADE_2.md  PAPER_LEVEL_SEARCH_SPACE_SPEC.md  PUBLIC_ARTIFACT_ALIGNMENT.md  README.md  TARGET_AWARE_ARTIFACT_MODEL_SPACE.md  TASK_K562_ESM2_ARTIFACT_SEARCH.md  TASK_K562_PROGRAM_SEARCH.md  TASK_K562_TARGET_AWARE_ARTIFACT_SEARCH.md  agent_prompt_template.md  pyproject.toml  requirements-official-k562.txt  requirements.txt
configs/: official_k562_native_public_best_reimplementation.json  official_k562_paper_scale_search_space.json  official_k562_public_best_node.json  official_k562_public_best_node_benchmark.json  official_k562_public_best_node_smoke.json  real_k562_demo_fixture.json  real_k562_template.json  root_mlp.json  root_regularized_mlp.json  vcharness_paper_model_universe.json
data/: README.md
docs/: GENERIC_CELLLINE_TRANSFER_ACCEPTANCE.md  GENERIC_CELLLINE_TRANSFER_RUNBOOK.md  GENERIC_CELLLINE_TRANSFER_SHORT_PROMPT.md  OFFICIAL_K562_DATA_CONTRACT.md  (+8 more)
(+13431 files in other folders)
