[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vc-demo"
version = "0.1.0"
description = "Official K562 VCHarness-style automatic modeling harness"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "tqdm>=4.66",
  "h5py>=3.10"
]

[tool.setuptools.packages.find]
where = ["src"]
